# fraud-detection

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  docker-compose.yml  info.json  justfile  nginx.conf
containerization/: Dockerfile  docker-compose.yml
resources/: result.json
scripts/: Cargo.toml  publish-ghcr.sh
scripts/src/: main.rs
src/: detector.rs  handlers.rs  main.rs  models.rs  vectorizer.rs
test/: results.json
