[package]
name = "fraud-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
monoio = { version = "0.2", features = ["macros"] }
ohkami = { version = "0.24", features = ["rt_monoio"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3.37", features = ["serde", "parsing"] }

[workspace]
members = ["scripts"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
