[package]
name = "fraud-detection"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3.37", features = ["serde", "parsing"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"

[workspace]
members = []

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
